<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.marstech.app.calllogerandreminder.BildirimFragment"
    android:id="@+id/bildirimFragment"
    android:background="@color/cardview_light_background">
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF5722"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtIsım"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="30dp"
                android:text="Murat ARSLAN"
                android:textColor="@android:color/background_light"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNumara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:text="05075627437"
                android:textColor="#FFCCBC"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgPopDate"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@mipmap/ic_calender" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/bildirim_date"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgPopTime"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@mipmap/ic_clock" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/bildirim_time"
                android:textSize="24sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/edtReminderMesaj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/reminder_text"
            android:inputType="textMultiLine"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" />

        <Button
            android:id="@+id/btnSetReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonshape"
            android:gravity="center"
            android:text="@string/set_reminder_button"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </LinearLayout>
</FrameLayout>
